--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@ function showGallery(){
 
 function nextImg(){
   index++;
+
   if(index <= 6){
-    document.getElementById("galleryImg").src = "img"+index+".jpg";
-    document.getElementById("imgText").innerText = imgMessages[index-1];
+    const img = document.getElementById("galleryImg");
+    img.src = "img" + index + ".jpg";
   }else{
     document.getElementById("gallery").classList.add("hidden");
     document.getElementById("end").classList.remove("hidden");
     startCounter();
   }
 }
-
 function startCounter(){
   setInterval(()=>{
     const now = new Date();
@@ -165,3 +165,4 @@ function startCounter(){
 
 </body>
 </html>
+
