--- a/index.html
+++ b/index.html
@@ -127,13 +127,14 @@ function showGallery(){
   document.getElementById("gallery").classList.remove("hidden");
   document.getElementById("imgText").innerText = imgMessages[0];
 }
-
+  
 function nextImg(){
   index++;
 
   if(index <= 6){
     const img = document.getElementById("galleryImg");
     img.src = "img" + index + ".jpg";
+    typeText(); // ← السطر السحري
   }else{
     document.getElementById("gallery").classList.add("hidden");
     document.getElementById("end").classList.remove("hidden");
@@ -166,5 +167,6 @@ function startCounter(){
 
 </body>
 </html>
+
 
 
